force-app/main/default/objects/FS_Tracking_History__c/FS_Tracking_History__c.object-meta.xml
<CustomObject>
    <description>This object is used to migrated the Tracking History data from the previous Org to the new Org.</description>
    <label>Tracking History (Pre-Org Split)</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracking History Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>