force-app/main/default/objects/FS_Tracking_History__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Field on the Object Name the tracking history item is related to</description>
    <label>Field</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>