force-app/main/default/objects/FS_Tracking_History__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Name of the object the tracking history is related to</description>
    <label>Object Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>